# Fish-speech-pipeline

./: .gitignore  README.md  pyproject.toml  setup.py
fish_speech/inference_engine/: __init__.py
fish_speech/models/vqgan/: inference.py
fish_speech_lib/: __init__  __init__.py  config.py  inference.py  model.py  utils.py
fish_speech_lib/fish_speech/: __init__.py  conversation.py  scheduler.py  tokenizer.py
fish_speech_lib/fish_speech/callbacks/: __init__.py  grad_norm.py
fish_speech_lib/fish_speech/inference_engine/: __init__.py  reference_loader.py  utils.py  vq_manager.py
fish_speech_lib/fish_speech/models/text2semantic/: inference.py  lit_module.py  llama.py  lora.py
fish_speech_lib/fish_speech/models/vqgan/: inference.py  utils.py
fish_speech_lib/fish_speech/models/vqgan/modules/: firefly.py  fsq.py
fish_speech_lib/fish_speech/text/: __init__.py  clean.py  spliter.py
fish_speech_lib/fish_speech/utils/: __init__.py  braceexpand.py  context.py  file.py  instantiators.py  logger.py  logging_utils.py  rich_utils.py  schema.py  spectrogram.py  utils.py
