[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fish_speech_lib"
version = "0.1.0"
description = "Fish Speech pipeline as library so you don't need to webui."
authors = [
    {name = "Atm4x", email = "your-email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<=1.26.4",
    "transformers>=4.45.2",
    "datasets==2.18.0",
    "lightning>=2.1.0",
    "hydra-core>=1.3.2",
    "tensorboard>=2.14.1",
    "natsort>=8.4.0",
    "einops>=0.7.0",
    "librosa>=0.10.1",
    "rich>=13.5.3",
    "gradio>5.0.0",
    "wandb>=0.15.11",
    "grpcio>=1.58.0",
    "kui>=1.6.0",
    "uvicorn>=0.30.0",
    "loguru>=0.6.0",
    "pyrootutils>=1.0.4",
    "resampy>=0.4.3",
    "zstandard>=0.22.0",
    "pydub",
    "pyaudio",
    "faster-whisper",
    "silero-vad",
    "ormsgpack",
    "tiktoken>=0.8.0",
    "pydantic==2.9.2",
    "cachetools",
    "huggingface-hub"
]

[project.scripts]
fish_speech_inference = "fish_speech_pipe.inference:main"


[tool.setuptools]
packages = [
    "fish_speech_lib", 
    "fish_speech_lib.fish_speech", 
    "fish_speech_lib.fish_speech.inference_engine", 
    "fish_speech_lib.fish_speech.models", 
    "fish_speech_lib.fish_speech.utils"
    
    ]